# -Evolution-of-Todo

./: .gitignore  CLAUDE.md  README.md  docker-compose.dapr.yml  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
.claude/agents/: ai-systems-architect.md  api-platform-agent.md  auth-orchestrator.md  claude-deployment-agent.md  copywriting-agent.md  docker-ops.md  (+8 more)
backend/: .dockerignore  .env  .env.example  .pre-commit-config.yaml  .prettierignore  Dockerfile  alembic.ini  cohere_test.py  requirements.txt
docs/: architecture.md  dapr-debugging.md  deployment-guide.md  github-secrets.md  local-dev.md  monitoring.md  troubleshooting.md
frontend/: .dockerignore  .env.example  .env.local.example  .prettierignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
k8s/: README.md  minikube-setup.sh
phase-1/: README.md  pyproject.toml  tasks.md
phase-1/specs/001-todo-cli/: spec.md
phase-1/specs/001-todo-cli/checklists/: requirements.md
phase-1/specs/colored-interactive-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/specs/colored-interactive-ui/checklists/: requirements.md
phase-1/specs/colored-interactive-ui/contracts/: internal-contracts.md
phase-1/src/todo/: __init__.py  __main__.py  cli.py  interactive.py  models.py  store.py
scripts/: apply-dapr-components.sh  create-cluster.sh  deploy-production.sh  e2e-test.sh  install-dapr.sh  local-dev.sh  test-local-events.sh  validate-success-criteria.sh  verify-health.sh
(+589 files in other folders)
